# evefrontier-rs

./: .dockerignore  .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .rusty-hook-test.md  .rusty-hook.toml  .terraformignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.release  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  traefik-dynamic.yml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-security-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: copilot-instructions.md  speckit.specify.agent.md
.github/instructions/: security-and-owasp.instructions.md
.github/prompts/: address-pr-comments.prompt.md  adr-alignment.prompt.md  commit.prompt.md  investigate-build-failure.prompt.md  next-task.prompt.md  review-and-refactor.prompt.md  update-deps.prompt.md
.github/scripts/: check-changelog.sh
.github/workflows/: adr-governance.yml  adr-guard.yml  ci.yml  dependency-check.yml  dependency-review.yml  docker-release.yml  fuzz.yml  release.yml  scorecard.yml
.pi-subagents/artifacts/: 26f17981-1a1f-46f8-94a5-83d3ece47a09_codebase-analyzer_1_input.md  26f17981-1a1f-46f8-94a5-83d3ece47a09_codebase-analyzer_1_meta.json  26f17981-1a1f-46f8-94a5-83d3ece47a09_codebase-analyzer_1_output.md  26f17981-1a1f-46f8-94a5-83d3ece47a09_codebase-analyzer_1_transcript.jsonl  26f17981-1a1f-46f8-94a5-83d3ece47a09_researcher_0_input.md  26f17981-1a1f-46f8-94a5-83d3ece47a09_researcher_0_meta.json  26f17981-1a1f-46f8-94a5-83d3ece47a09_researcher_0_output.md  26f17981-1a1f-46f8-94a5-83d3ece47a09_researcher_0_transcript.jsonl  26f17981-1a1f-46f8-94a5-83d3ece47a09_reviewer_2_input.md  26f17981-1a1f-46f8-94a5-83d3ece47a09_reviewer_2_meta.json  26f17981-1a1f-46f8-94a5-83d3ece47a09_reviewer_2_output.md  26f17981-1a1f-46f8-94a5-83d3ece47a09_reviewer_2_transcript.jsonl  4ae34ea3-f0e9-4978-86c1-24756ebf495e_reviewer_input.md  (+6 more)
crates/evefrontier-cli/: Cargo.toml  project.json
crates/evefrontier-cli/examples/: message_box_demo.rs
crates/evefrontier-cli/src/: common_args.rs  enhanced.rs  lib.rs  main.rs  output.rs  output_helpers.rs  terminal.rs  test_helpers.rs
crates/evefrontier-cli/src/commands/: download.rs  fmap.rs  index.rs  mcp.rs  mod.rs  route.rs  scout.rs  ships.rs
crates/evefrontier-cli/src/output/: enhanced.rs  text.rs
crates/evefrontier-cli/tests/: cli_tests.rs  download_cli.rs  enhanced_goal_status.rs  list_ships.rs  mcp_stdio.rs  route_avoid_critical.rs  route_commands.rs  route_fuel_cli.rs  scout_gates.rs  scout_range.rs  scout_range_fuel.rs
crates/evefrontier-lambda-route/: Cargo.toml  project.json
crates/evefrontier-lambda-route/src/: lib.rs  main.rs  models.rs
crates/evefrontier-lambda-route/tests/: fuel_projection.rs
crates/evefrontier-lambda-scout-gates/: Cargo.toml  project.json
crates/evefrontier-lambda-scout-gates/src/: main.rs
crates/evefrontier-lambda-scout-range/: Cargo.toml  project.json
crates/evefrontier-lambda-scout-range/src/: main.rs
crates/evefrontier-lambda-shared/: Cargo.toml  project.json
crates/evefrontier-lambda-shared/src/: lib.rs  problem.rs  requests.rs  response.rs  runtime.rs  test_utils.rs  tracing_init.rs
crates/evefrontier-lib/: Cargo.toml  project.json
crates/evefrontier-lib/benches/: pathfinding.rs
crates/evefrontier-lib/src/: dataset.rs  db.rs  error.rs  fmap.rs  github.rs  graph.rs  lib.rs  output.rs  path.rs  routing.rs  ship.rs  spatial.rs  temperature.rs  test_helpers.rs
crates/evefrontier-lib/src/routing/: mod.rs  planner.rs
crates/evefrontier-lib/src/ship/: attributes.rs  catalog.rs  constants.rs  fuel.rs  heat.rs  mod.rs
crates/evefrontier-lib/tests/: common.rs  dataset_download.rs  dataset_download_ship_data.rs  dataset_fixture_guard.rs  dataset_fixture_metadata.rs  dataset_normalize.rs  fmap.rs  fmap_decode.rs  fuel_calc.rs  fuzzy_matching.rs  graph.rs  heat_calculations.rs  heat_threshold_regression.rs  in_game_reflex_example.rs  inn6l4_a3v125.rs  load_starmap.rs  output.rs  route_dynamic_heat.rs  route_fuel_projection.rs  route_heat_projection.rs  route_heat_warnings.rs  routing.rs  routing_critical.rs  sample_routes.rs  ship_catalog.rs  spatial_index.rs  spatial_index_metadata.rs  temperature_game_data.rs  temperature_observed.rs
crates/evefrontier-lib/tests/common/: mod.rs
crates/evefrontier-mcp/: Cargo.toml  project.json
crates/evefrontier-mcp/src/: error.rs  lib.rs  main.rs  prompts.rs  resources.rs  server.rs  tools.rs  types.rs
crates/evefrontier-mcp/tests/: integration_test.rs
crates/evefrontier-service-scout-range/: Cargo.toml  Dockerfile  project.json
crates/evefrontier-service-scout-range/src/: main.rs
crates/evefrontier-service-shared/: Cargo.toml  project.json
crates/evefrontier-service-shared/src/: health.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  problem.rs  request.rs  response.rs  state.rs  test_utils.rs
data/: .gitignore  README.md
docs/: ARCHITECTURE.md  CODING_GUIDELINES.md  DEPLOYMENT.md  EXAMPLES.md  HEAT_MECHANICS.md  HIGH_LEVEL_DESIGN.md  INITIAL_SETUP.md  OBSERVABILITY.md  README.md  RELEASE.md  SECURITY_AUDIT.md  SampleRoutes.csv  TESTING.md  TODO.md  USAGE.md  adr-alignment-report_2025-11-12.md  adr-alignment-report_2025-12-30.md  openssf-bestpractices-questionnaire.md  scorecard-alerts-post-merge.md  scorecard-alerts.md  threat-model.md
docs/adrs/: TEMPLATE.md  (+18 more)
fuzz/: Cargo.toml  project.json
fuzz/fuzz_targets/: dataset_zip_extract.rs  fmap_roundtrip.rs  spatial_index_load.rs
scripts/: README.md  analyze_sample_routes.py  check-pnpm-outdated.js  create_minimal_db.py  extract_fixture_from_dataset.py  extract_route_fixture.py  fixture_status.py  inspect_db.py  outdated-report.js  project.json  requirements.txt  run-audit.js  run-markdownlint-if-exists.js  run-precommit-nx.js  run-prettier-if-exists.js  validate_adrs.js
src/: lib.rs
terraform/: .gitignore
(+194 files in other folders)
