[workspace]
members = [
    "crates/evefrontier-lib",
    "crates/evefrontier-cli",
    "crates/evefrontier-lambda-route",
    "crates/evefrontier-lambda-scout-gates",
    "crates/evefrontier-lambda-scout-range",
]
resolver = "2"

# Root package for workspace-level tooling (pre-commit hooks, etc.)
[package]
name = "evefrontier-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[dev-dependencies]
rusty-hook = "0.11.2"

# Pre-commit hooks configuration
[package.metadata.rusty-hook]
version = "1"

[package.metadata.rusty-hook.hooks]
pre-commit = """
    set -e
    echo "🔍 Running pre-commit checks..."
    
    # 1. Format check
    echo "  → Checking code formatting..."
    cargo fmt --all -- --check
    
    # 2. Clippy
    echo "  → Running clippy..."
    cargo clippy --workspace --all-targets -- -D warnings
    
    # 3. Build
    echo "  → Building workspace..."
    cargo build --workspace --all-targets
    
    # 4. Tests
    echo "  → Running tests..."
    cargo test --workspace
    
    echo "✅ All pre-commit checks passed!"
"""

[workspace.package]
edition = "2021"
authors = ["EveFrontier Contributors"]
license = "Apache-2.0"
repository = "https://github.com/scetrov/evefrontier-rs"
description = "Workspace for EveFrontier pathfinding library, CLI, and AWS Lambda functions."

[workspace.dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled"] }
clap = { version = "4.5.51", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
tempfile = "3.23.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
assert_cmd = "2.1.1"
predicates = "3.1.3"
once_cell = "1.21.3"
rusty-hook = "0.11.2"
lambda_runtime = "0.13"
tokio = { version = "1.42", features = ["macros"] }
