[workspace]
members = [
    "crates/evefrontier-lib",
    "crates/evefrontier-cli",
    "crates/evefrontier-mcp",
    "crates/evefrontier-lambda-shared",
    "crates/evefrontier-lambda-route",
    "crates/evefrontier-lambda-scout-gates",
    "crates/evefrontier-lambda-scout-range",
    "crates/evefrontier-service-shared",
    "crates/evefrontier-service-route",
    "crates/evefrontier-service-scout-gates",
    "crates/evefrontier-service-scout-range",
]
resolver = "2"

# Root package for workspace-level tooling (pre-commit hooks, etc.)
[package]
name = "evefrontier-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[dev-dependencies]
rusty-hook = "0.11.2"

# Pre-commit hooks configuration
[package.metadata.rusty-hook]
version = "1"

[package.metadata.rusty-hook.hooks]
pre-commit = """
    set -e
    
    # Check for required tooling
    if ! command -v pnpm &> /dev/null; then
        echo "❌ Error: pnpm is required for pre-commit hooks."
        echo "   Recommended setup using corepack (respects packageManager in package.json):"
        echo "     corepack enable"
        echo "     corepack prepare pnpm@10.0.0 --activate"
        echo ""
        echo "   Alternative: npm install -g pnpm@10"
        echo "   See CONTRIBUTING.md for detailed setup instructions."
        exit 1
    fi
    
    echo "🔍 Running pre-commit checks via Nx..."
    
    # 1. Format check
    echo "  → Checking code formatting..."
    pnpm nx run-many -t lint --exclude evefrontier-rs
    
    # 2. Clippy
    echo "  → Running clippy..."
    pnpm nx run-many -t clippy --exclude evefrontier-rs
    
    # 3. Build
    echo "  → Building workspace..."
    pnpm nx run-many -t build --exclude evefrontier-rs
    
    # 4. Tests
    echo "  → Running tests..."
    pnpm nx run-many -t test --exclude evefrontier-rs
    
    # 5. Security audit (workspace-level)
    echo "  → Running security audit..."
    if ! command -v cargo-audit &> /dev/null; then
        echo "❌ Error: cargo-audit is required for pre-commit hooks."
        echo "   Install with: cargo install cargo-audit --locked"
        echo "   See CONTRIBUTING.md for detailed setup instructions."
        exit 1
    fi
    # Default behavior: fail on security advisories, show warnings for yanked/unmaintained
    cargo audit
    
    echo "✅ All pre-commit checks passed!"
"""

[workspace.package]
edition = "2021"
authors = ["Scetrov"]
license = "MIT"
repository = "https://github.com/scetrov/evefrontier-rs"
description = "Workspace for EVE Frontier pathfinding library, CLI, and AWS Lambda functions."

[workspace.dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled", "serialize"] }
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3.23.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
assert_cmd = "2.1.1"
predicates = "3.1.3"
once_cell = "1.21.3"
rusty-hook = "0.11.2"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
http = "1.4.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
axum-test = "17.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
