[package]
name = "evefrontier-cli"
version = "0.1.0"
edition = "2021"
authors = ["EveFrontier Contributors"]
description = "Command-line interface for EveFrontier dataset and pathfinding tools."
license = "MIT"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
evefrontier-lib = { path = "../evefrontier-lib" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
