[package]
name = "evefrontier-cli"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Command-line interface for EVE Frontier dataset and pathfinding tools."
license = "MIT"

[lib]
name = "evefrontier_cli"
path = "src/lib.rs"

[[bin]]
name = "evefrontier-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
evefrontier-lib = { path = "../evefrontier-lib" }
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# MCP subcommand dependencies
evefrontier-mcp = { path = "../evefrontier-mcp" }
tokio = { version = "1.30", features = ["io-util", "macros", "signal", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
wait-timeout = "0.2"
