[package]
name = "evefrontier-lambda-route"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AWS Lambda function for route planning"

[dependencies]
evefrontier-lib = { path = "../evefrontier-lib" }
evefrontier-lambda-shared = { path = "../evefrontier-lambda-shared" }
lambda_runtime.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
