[package]
name = "evefrontier-lambda-scout-range"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AWS Lambda function for scouting systems within range"

[features]
# When enabled, bundles large dataset artifacts from `data/` into the binary.
# Disabled by default to keep CI builds lightweight.
bundle-data = []

[dependencies]
evefrontier-lib = { path = "../evefrontier-lib" }
evefrontier-lambda-shared = { path = "../evefrontier-lambda-shared" }
lambda_runtime.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
evefrontier-lambda-shared = { path = "../evefrontier-lambda-shared", features = ["test-utils"] }
