[package]
name = "evefrontier-lib"
version = "0.1.0"
edition = "2021"
authors = ["EveFrontier Contributors"]
description = "Core library for EveFrontier dataset handling and pathfinding."
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
reqwest.workspace = true
tempfile.workspace = true
zip.workspace = true
strsim = "0.11.1"
once_cell.workspace = true

# Spatial index (KD-tree) support - ADR 0009
 kiddo = "5.2"
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
zstd = "0.13"
sha2 = "0.10"

[dev-dependencies]
 criterion = "0.8"

[[bench]]
name = "pathfinding"
harness = false
