[package]
name = "evefrontier-lib"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Core library for EVE Frontier dataset handling and pathfinding."
license = "MIT"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
reqwest.workspace = true
tempfile.workspace = true
zip.workspace = true
strsim = "0.11.1"
once_cell.workspace = true
csv = "1.3"

# Spatial index (KD-tree) support - ADR 0009
kiddo = "5.2.3"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
zstd = "0.13.3"
sha2 = "0.10.9"

[dev-dependencies]
criterion = "0.8.0"
hex = "0.4.3"
tempfile = "3.19"

[[bench]]
name = "pathfinding"
harness = false

[features]
default = []
mcp = []
