[package]
name = "evefrontier-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for EVE Frontier dataset exploration"
license = "Apache-2.0"

[[bin]]
name = "evefrontier-mcp"
path = "src/main.rs"

[dependencies]
evefrontier-lib = { path = "../evefrontier-lib", features = ["mcp"] }
rmcp = { version = "0.12", features = ["server"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
anyhow = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = []
