[package]
name = "evefrontier-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for EVE Frontier dataset exploration"
license = "Apache-2.0"

[[bin]]
name = "evefrontier-mcp"
path = "src/main.rs"

[dependencies]
evefrontier-lib = { path = "../evefrontier-lib", features = ["mcp"] }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.2", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
anyhow = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
dirs = "6.0"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.2"
predicates = "3.0"

[features]
default = []
