[package]
name = "evefrontier-service-shared"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared infrastructure for EVE Frontier HTTP microservices"

[features]
default = []
# Enable test utilities for cross-crate testing
test-utils = []

[dependencies]
evefrontier-lib = { path = "../evefrontier-lib" }
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
http.workspace = true
tokio.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
